tests/baselines/reference/parserStrictMode10.errors.txt
parserStrictMode10.ts(2,12): error TS1100: Invalid use of 'eval' in strict mode.


==== parserStrictMode10.ts (1 errors) ====
    "use strict";
    function f(eval) {
               ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    }